<resources>
    <string name="app_name">SmallBrother</string>

    <!-- Indications -->

    <string name="indic_launch1">
        Bonjour, et merci d\'avoir choisi SmallBrother pour vous aider.
    </string>
    <string name="install">Installation</string>
    <string name="installDant">[Aidant] Installation</string>
    <string name="installde">[Aidé] Installation</string>
    <string name="install_note1">
        Avant tout, il va falloir installer et configurer l\'application sur deux téléphones,
        selon le rôle de chacun :
    </string>
    <string name="install_note2">Veuillez compléter ces champs :</string>
    <string name="input1A">Prénom de l\'Aidant</string>
    <string name="input1B">Prénom de l\'Aidé</string>
    <string name="input2A">N° de portable de l\'Aidé</string>
    <string name="input2B">N° de portable de l\'Aidant</string>
    <string name="reglages_intitule">Réglages</string>
    <string name="reglages_note">
        Ce menu vous permet de réinitialiser votre application et celle de l\'aidé.
        Attention, si vous réinitialisez les applications, vous devrez réinstaller l\'application sur les deux smartphones.
    </string>
    <string name="chargement">Envoi en cours </string>
    <string name="nophoto">Aucun fichier trouvé.</string>
    <string name="reacpitulatif_cln1">→ Nom : \n→ Numéro de l\'Aidé : </string>
    <string name="popup1">
        Entrez une durée en minutes (maximum 120) durant laquelle vous ne souhaitez pas
        que votre partenaire puisse vérifier votre situation :
    </string>
    <string name="intitule_delai">Temps restant : </string>


    <!-- Boutons -->
    <string name="btn_commencer">Commencer</string>
    <string name="btn_role1">Ce téléphone est celui de l\'Aidant</string>
    <string name="btn_role2">Ce téléphone est celui de l\'Aidé</string>
    <string name="btn_previous">Retour</string>
    <string name="btn_continue">Continuer</string>
    <string name="btn_terminer">Terminer</string>
    <string name="btn_valider">Valider</string>
    <string name="btn_annuler">Annuler</string>
    <string name="btn_sauver">Sauver</string>
    <string name="btn_sms_va_dant">Envoyer SMS: Tout va bien ?</string>
    <string name="btn_sms_va_de">Envoyer SMS: Tout va bien.</string>
    <string name="btn_appel">Appeler §%</string>
    <string name="btn_urgence">Vérifier la situation §%</string>
    <string name="btn_tiers">Envoyer les info par mail à …</string>
    <string name="btn_reinit_1">Réinitialiser SmallBrother</string>
    <string name="btn_switch">Mode Privé </string>


    <!-- Messages Système -->

    <!-- Messages -->
    <string name="oui">Oui</string>
    <string name="message01">SmallBrother reste actif en arrière-plan.</string>
    <string name="message02_titre">Réinitialiser l\'application</string>
    <string name="message02_texte">Confirmez-vous cette action ?</string>
    <string name="message02_settings">Confirmez-vous cette action ? Vous devrez réinstaller
        l\'application sur les deux smartphones pour pouvoir l\'utiliser à nouveau. Cette action
        entraînera la suppression des données en lien avec l\'application sur les smartphones de
        l\'aidant et de l\'aidé. Les captures de contexte seront toujours
        disponibles dans votre dossier de téléchargement.</string>
    <string name="message03A">Suppression effectuée.</string>
    <string name="message04">SMS envoyé.</string>
    <string name="message05">L\'appel est lancé.</string>
    <string name="message06">
        §% tente de vérifier votre situation. Veuillez patienter pendant que SmallBrother réalise les actions requises.
    </string>
    <string name="message06B">
        RAPPEL :
        ce processus va déclencher les appareils photo, micro et outils de localisation.
    </string>
    <string name="message07">La demande a été envoyée.</string>
    <string name="message10">Mode Privé activé pour §% minute(s).</string>
    <string name="message11">Mode Privé désactivé.</string>
    <string name="message12A">EN COURS : enregistrement audio.</string>
    <string name="message12B">EN COURS : prise des photos.</string>
    <string name="message12C">EN COURS : localisation du téléphone.</string>
    <string name="message12D">EN COURS : compression des fichiers.</string>
    <string name="message12E">EN COURS : récupération du niveau de batterie.</string>
    <string name="message12F">EN COURS : envoi du rapport de situation.</string>
    <string name="message13A">Avertissement :</string>
    <string name="message13B">
        Installer la version Aidé de SmallBrother donnera à votre partenaire accès
        à vos informations contextuelles telles que votre localisation, un enregistrement et
        des photos.
    </string>
    <string name="message13C">Information :</string>

    <!-- Erreurs -->
    <string name="error01">
        Le numéro doit être au format GSM belge standard (04 puis huit chiffres).
    </string>
    <string name="error03">Tous les champs doivent être complétés.</string>


    <!-- SMS Système -->

    <string name="smsys01">
        SmallBrother : §% lance la réinitialisation de vos données. [#SB01]
    </string>
    <string name="smsys02">SmallBrother : §% vous demande si tout va bien ? [#SB02]</string>
    <string name="smsys03">SmallBrother : §% vous signale que tout va bien ! [#SB03]</string>
    <string name="smsys04">
        SmallBrother : §% demande à vérifier votre situation.[#SB04]
    </string>
    <string name="smsys05">SmallBrother : §% n\'est actuellement pas connecté à Internet ! [#SB05]</string>
    <string name="smsys07">SmallBrother : §% a activé le Mode Privé. (N#)[#SB07]</string>
    <string name="smsys08">SmallBrother : §% a besoin d\'assistance immédiatement! [#SB08]</string>
    <string name="smsys09">SmallBrother : Erreur lors de l\'envoi de la capture de contexte au serveur. [#SB09]</string>
    <string name="smsys10">"SmallBrother : §% [#SB10]"</string>


    <!-- Log -->
    <string name="log_install">Installation terminée.</string>
    <string name="log_reset_aidant">Réinitialisation des données SmallBrother sur votre téléphone.</string>
    <string name="log_reset_aide">Réinitialisation des données SmallBrother sur le téléphone §%.</string>
    <string name="log_aidant_send_SMS">SMS envoyé à §%.</string>
    <string name="log_aidant_receive_SMS">§% va bien.</string>
    <string name="log_aide_receive_SMS">§% demande si tout va bien ?</string>
    <string name="log_call">Vous appelez §%.</string>
    <string name="log_called">§% vous a appelé.</string>
    <string name="log_call_missed">Vous avez manqué un appel §%.</string>
    <string name="log_aidant_requests_context">
        Vous avez demandé à vérifier la situation §%.
        Le traitement est en cours, veuillez patienter.
    </string>
    <string name="log_data_on_server">
        Les données §% sont disponibles dans votre dossier de téléchargement. Vous pouvez l\'ouvrir en appuyant sur le dossier en haut à droite de l\'écran.
    </string>
    <string name="log_no_internet_aide">
        §% tente de vérifier votre situation.
        Pourquoi ne pas l\'appeler ?
    </string>
    <string name="log_no_internet_aidant">
        §% n\'a pas Internet, les fichiers ne peuvent être envoyés au serveur.
    </string>
    <string name="log_aide_needs_help">§% a besoin d\'aide immédiatement. Ses données seront disponibles dans votre dossier de téléchargement dans quelques instants.</string>
    <string name="log_aide_send_SMS">Vous avez signalé à §% que tout va bien.</string>
    <string name="log_download_ko">Il n\'y a pas de fichier sur le serveur appartenant à §%.</string>
    <string name="log_private_expired">Le délai du Mode Privé est écoulé.</string>
    <string name="log_private_warn">
        §% souhaite ne pas être dérangé.e durant les N# prochaines minutes.
    </string>
    <string name="log_private_on">Vous avez activé le mode privé.</string>
    <string name="log_context_sent">Votre situation a été envoyée à §%.</string>
    <string name="aidant_request_context_no_internet">Veuillez activer Internet puis appuyez sur \"J\'ai besoin d\'aide\"</string>
    <string name="log_warn_aide_upload_failed">Votre situation ne peut être envoyée, appelez $%</string>
    <string name="log_upload_failed">Erreur lors de l\'envoi du fichier §% sur le serveur, veuillez revérifier sa situation.</string>


    <string name="logo_unamur">Logo UNamur</string>
    <string name="logo_sb">Logo SmallBrother</string>
    <string name="empty_string">" "</string>
    <string name="help_aide">J\'ai besoin d\'aide</string>
    <string name="retelecharger_les_donnees_de_l_aide">Retélécharger les données</string>

    <string name="qr_code">QR Code</string>
    <string name="installScan">[INSTALLATION] Veuillez scanner le QR code sur le smartphone §%.</string>
    <string name="installQR">[INSTALLATION] Scannez ce QR code avec le smartphone §%, puis appuyez sur le bouton \'Terminer\'.</string>
    <string name="nomAide">Prénom de l\'Aidé</string>
    <string name="blank" />
    <string name="duree_prive_base">15</string>
    <string name="contentDesc_download">Dossier de téléchargement</string>
    <string name="contentDesc_log">Cadre du log</string>
    <string name="contentDesc_reglages">Bouton Réglages</string>
    <string name="scan_termin_avec_succ_s_appuyez_sur_afficher_qr_code_pour_continuer">[INSTALLATION] Scan terminé avec succès, veuillez appuyer sur \'Afficher QR code\' pour permettre à §% de le scanner.</string>
    <string name="afficher_qr_code">Afficher QR code</string>

</resources>
