...
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/metalliqueshape" >


            <TextView
                android:id="@+id/log_texte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="center" >

                    <Switch
                        android:id="@+id/btn_deranger"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/btn_switch"
                        android:textColor="#656262"
                        android:textSize="27sp"
                        android:gravity="end|center_vertical"
...
