<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:id="@+id/texte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup1"
        android:textSize="27sp"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/input_delai"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/duree_prive_base"
        android:textSize="27sp"
        android:layout_margin="10dp" />

        <requestFocus />

</LinearLayout>
