...
        android:textColor="#000000"
        android:textSize="24sp" />

    <!-- [INPUTS] -->

    <EditText
        android:id="@+id/input_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input1A"
        android:textSize="24sp"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />
...
